--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,17 +4,14 @@
     "icons": [
         {
             "src": "logo.svg",
-            "sizes": "64x64 32x32 24x24 16x16",
-            "type": "image/svg"
+            "sizes": "64x64 32x32 24x24 16x16"
         },
         {
             "src": "logo.svg",
-            "type": "image/svg",
             "sizes": "192x192"
         },
         {
             "src": "logo.svg",
-            "type": "image/svg",
             "sizes": "512x512"
         }
     ],
