--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,15 +4,8 @@
     "icons": [
         {
             "src": "logo.svg",
-            "sizes": "64x64 32x32 24x24 16x16"
-        },
-        {
-            "src": "logo.svg",
-            "sizes": "192x192"
-        },
-        {
-            "src": "logo.svg",
-            "sizes": "512x512"
+            "sizes": "64x64 32x32 24x24 16x16",
+            "type": "image/svg+xml"
         }
     ],
     "start_url": ".",
