--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@testing-library/user-event": "^12.1.10",
         "antd": "^4.17.2",
         "axios": "^0.24.0",
+        "css-validator": "^0.10.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.20.4",
