--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "css-validator": "^0.10.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-helmet": "^6.1.0",
         "react-hook-form": "^7.20.4",
         "react-router-dom": "^6.1.1",
         "react-scripts": "4.0.3",
